objects/Equipment__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BASIS_Model__c</fullName>
        <externalId>true</externalId>
        <label>BASIS Model</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Bottle_Capacity__c</fullName>
        <label>Bottle Capacity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Can_Capacity__c</fullName>
        <label>Can Capacity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CapGemini_Model__c</fullName>
        <label>CapGemini Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Image__c</fullName>
        <label>Default Image</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Depth__c</fullName>
        <label>Depth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Category_Name__c</fullName>
        <formula>Equipment_Category__r.Category_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equipment Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment Category</label>
        <referenceTo>Equipment_Category__c</referenceTo>
        <relationshipLabel>Equipment</relationshipLabel>
        <relationshipName>Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Equipment_Order_Type__c</fullName>
        <label>Equipment Order Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ice_Capacity__c</fullName>
        <label>Ice Capacity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Largest_Model_Dimension__c</fullName>
        <label>Largest Model Dimension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Classification__c</fullName>
        <label>Material Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Description__c</fullName>
        <label>Material Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Number__c</fullName>
        <label>Material Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Dimension__c</fullName>
        <label>Model Dimension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Model Group</label>
        <referenceTo>Model_Group__c</referenceTo>
        <relationshipLabel>Equipment</relationshipLabel>
        <relationshipName>Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model_Number__c</fullName>
        <label>Model Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Facings__c</fullName>
        <label>Number of Facings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Rows__c</fullName>
        <label>Number of Rows</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TBSA_Authorized__c</fullName>
        <label>TBSA Authorized</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valve__c</fullName>
        <label>Valve</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Equipment Material Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Material_Classification__c</columns>
        <columns>Model_Group__c</columns>
        <columns>NAME</columns>
        <columns>BASIS_Model__c</columns>
        <columns>Bottle_Capacity__c</columns>
        <columns>Can_Capacity__c</columns>
        <columns>CapGemini_Model__c</columns>
        <columns>Default_Image__c</columns>
        <columns>Depth__c</columns>
        <columns>Equipment_Category__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Equipment_Order_Type__c</columns>
        <columns>Height__c</columns>
        <columns>Largest_Model_Dimension__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BASIS_Model__c</field>
            <operation>equals</operation>
            <value>MM-170</value>
        </filters>
        <label>MM-170</label>
    </listViews>
    <listViews>
        <fullName>All_Equipment</fullName>
        <columns>NAME</columns>
        <columns>Model_Number__c</columns>
        <columns>BASIS_Model__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Material_Description__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Equipment_Category__c</columns>
        <columns>Ice_Capacity__c</columns>
        <columns>Bottle_Capacity__c</columns>
        <columns>Can_Capacity__c</columns>
        <columns>Largest_Model_Dimension__c</columns>
        <columns>Equipment_Order_Type__c</columns>
        <columns>Model_Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All_Equipment</label>
    </listViews>
    <listViews>
        <fullName>Allglass</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Material_Classification__c</columns>
        <columns>Model_Group__c</columns>
        <columns>NAME</columns>
        <columns>BASIS_Model__c</columns>
        <columns>Number_of_Rows__c</columns>
        <columns>Bottle_Capacity__c</columns>
        <columns>Can_Capacity__c</columns>
        <columns>CapGemini_Model__c</columns>
        <columns>Default_Image__c</columns>
        <columns>Depth__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Equipment_Order_Type__c</columns>
        <columns>Height__c</columns>
        <columns>Largest_Model_Dimension__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Material_Classification__c</field>
            <operation>equals</operation>
            <value>Z_VENDING_GFV</value>
        </filters>
        <label>All Glass Type</label>
    </listViews>
    <listViews>
        <fullName>Allnoglassnostack</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Material_Classification__c</columns>
        <columns>Model_Group__c</columns>
        <columns>NAME</columns>
        <columns>BASIS_Model__c</columns>
        <columns>Bottle_Capacity__c</columns>
        <columns>Can_Capacity__c</columns>
        <columns>CapGemini_Model__c</columns>
        <columns>Default_Image__c</columns>
        <columns>Depth__c</columns>
        <columns>Equipment_Category__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Equipment_Order_Type__c</columns>
        <columns>Height__c</columns>
        <columns>Largest_Model_Dimension__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Material_Classification__c</field>
            <operation>notEqual</operation>
            <value>Z_VENDING_GFV</value>
        </filters>
        <filters>
            <field>Material_Classification__c</field>
            <operation>notEqual</operation>
            <value>Z_VENDING_GENERAL</value>
        </filters>
        <label>All non-Glass non-Stack Type</label>
    </listViews>
    <listViews>
        <fullName>Allstack</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Material_Classification__c</columns>
        <columns>Model_Group__c</columns>
        <columns>NAME</columns>
        <columns>BASIS_Model__c</columns>
        <columns>Bottle_Capacity__c</columns>
        <columns>Can_Capacity__c</columns>
        <columns>CapGemini_Model__c</columns>
        <columns>Default_Image__c</columns>
        <columns>Depth__c</columns>
        <columns>Equipment_Category__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Equipment_Order_Type__c</columns>
        <columns>Height__c</columns>
        <columns>Largest_Model_Dimension__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Material_Classification__c</field>
            <operation>equals</operation>
            <value>Z_VENDING_GENERAL</value>
        </filters>
        <label>All Stack Type</label>
    </listViews>
    <listViews>
        <fullName>Dimensions</fullName>
        <columns>NAME</columns>
        <columns>Material_Description__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Model_Group__c</columns>
        <columns>Width__c</columns>
        <columns>Height__c</columns>
        <columns>Depth__c</columns>
        <columns>Ice_Capacity__c</columns>
        <columns>Bottle_Capacity__c</columns>
        <columns>Can_Capacity__c</columns>
        <filterScope>Everything</filterScope>
        <label>Dimensions</label>
    </listViews>
    <listViews>
        <fullName>INT_Equipment_Brewed</fullName>
        <columns>NAME</columns>
        <columns>Equipment_Category__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Model_Group__c</columns>
        <columns>Bottle_Capacity__c</columns>
        <columns>Can_Capacity__c</columns>
        <columns>Ice_Capacity__c</columns>
        <columns>Width__c</columns>
        <columns>Height__c</columns>
        <columns>Depth__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Equipment_Category__c</field>
            <operation>equals</operation>
            <value>BT</value>
        </filters>
        <label>INT Equipment - Brewed</label>
    </listViews>
    <listViews>
        <fullName>INT_Equipment_Coolers</fullName>
        <columns>NAME</columns>
        <columns>Material_Description__c</columns>
        <columns>Equipment_Category__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Model_Group__c</columns>
        <columns>Bottle_Capacity__c</columns>
        <columns>Can_Capacity__c</columns>
        <columns>Ice_Capacity__c</columns>
        <columns>Width__c</columns>
        <columns>Height__c</columns>
        <columns>Depth__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Equipment_Category_Name__c</field>
            <operation>equals</operation>
            <value>COOLER</value>
        </filters>
        <label>INT Equipment - Coolers</label>
    </listViews>
    <listViews>
        <fullName>INT_Equipment_Dispensed</fullName>
        <columns>NAME</columns>
        <columns>Equipment_Category__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Model_Group__c</columns>
        <columns>Bottle_Capacity__c</columns>
        <columns>Can_Capacity__c</columns>
        <columns>Ice_Capacity__c</columns>
        <columns>Width__c</columns>
        <columns>Height__c</columns>
        <columns>Depth__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Equipment_Category_Name__c</field>
            <operation>equals</operation>
            <value>DISPENSING</value>
        </filters>
        <label>INT Equipment - Dispensed</label>
    </listViews>
    <listViews>
        <fullName>INT_Equipment_Juice</fullName>
        <columns>NAME</columns>
        <columns>Equipment_Category__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Model_Group__c</columns>
        <columns>Bottle_Capacity__c</columns>
        <columns>Can_Capacity__c</columns>
        <columns>Ice_Capacity__c</columns>
        <columns>Width__c</columns>
        <columns>Height__c</columns>
        <columns>Depth__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Equipment_Category_Name__c</field>
            <operation>equals</operation>
            <value>JUICE</value>
        </filters>
        <label>INT Equipment - Juice</label>
    </listViews>
    <listViews>
        <fullName>INT_Equipment_Venders</fullName>
        <columns>NAME</columns>
        <columns>Material_Description__c</columns>
        <columns>Equipment_Category__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Number_of_Rows__c</columns>
        <columns>Model_Group__c</columns>
        <columns>Bottle_Capacity__c</columns>
        <columns>Can_Capacity__c</columns>
        <columns>Ice_Capacity__c</columns>
        <columns>Width__c</columns>
        <columns>Height__c</columns>
        <columns>Depth__c</columns>
        <columns>Model_Dimension__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Equipment_Category_Name__c</field>
            <operation>equals</operation>
            <value>VENDING</value>
        </filters>
        <label>INT Equipment - Venders</label>
    </listViews>
    <listViews>
        <fullName>MyEquipment</fullName>
        <filterScope>Mine</filterScope>
        <label>MyEquipment</label>
    </listViews>
    <listViews>
        <fullName>Vending_Equipment</fullName>
        <columns>NAME</columns>
        <columns>Model_Number__c</columns>
        <columns>Material_Description__c</columns>
        <columns>Model_Group__c</columns>
        <columns>BASIS_Model__c</columns>
        <columns>Material_Number__c</columns>
        <columns>Equipment_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Equipment_Category__c</field>
            <operation>equals</operation>
            <value>EC-000014</value>
        </filters>
        <filters>
            <field>Model_Group__c</field>
            <operation>equals</operation>
            <value>EG-01171</value>
        </filters>
        <label>Vending Equipment</label>
    </listViews>
    <listViews>
        <fullName>small_equipment</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Model_Group__c</columns>
        <columns>Material_Description__c</columns>
        <columns>Model_Dimension__c</columns>
        <columns>Equipment_Category__c</columns>
        <columns>Equipment_Category_Name__c</columns>
        <columns>Bottle_Capacity__c</columns>
        <columns>Can_Capacity__c</columns>
        <columns>Ice_Capacity__c</columns>
        <columns>Depth__c</columns>
        <columns>Height__c</columns>
        <columns>Width__c</columns>
        <columns>Equipment_Order_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Material_Description__c</field>
            <operation>contains</operation>
            <value>Small</value>
        </filters>
        <label>small equipment</label>
    </listViews>
    <nameField>
        <displayFormat>EQ-{000000}</displayFormat>
        <label>Equipment Material Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>